# claude-cli

./: Cargo.toml  ci.yaml  project-structure.txt  readme.md
claude/: Cargo.toml
claude-common/: Cargo.toml
claude-common/src/: api.rs  config.rs  lib.rs  logging.rs  types.rs
claude-common/src/config/: lua.rs  mcp.rs
claude-config/: Cargo.toml
claude-config/src/: main.rs
claude/src/: main.rs
claude/src/repl/: session.rs
docs/: development.md
packaging/debian/: control.txt
packaging/homebrew/: claude-cli.rb
packaging/rpm/: claude-cli.spec
tests/: readme.md
tests/helpers/: mod.rs
tests/integration/: cli-tests.rs
tests/mocks/: api-tests.rs  data_test.rs
tests/unit/: config_tests.rs
