[workspace]
members = [
    "claude",
    "claude-config",
    "claude-common"
]

workspace.resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["James Day <james@day.net.nz>"]
license = "MIT"
repository = "https://github.com/jarmez/claude-cli"

[workspace.dependencies]
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
clap = { version = "4.4", features = ["derive"] }
dirs = "5.0"
anthropic = "0.0.8"  # Updated to latest available version
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
crossterm = "0.27"
mlua = { version = "0.9", features = ["lua54"] }
chrono = "0.4"
csv = "1.3"
syslog = "6.1"
reqwest = { version = "0.11", features = ["json"] }