[package]
name = "claude-common"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
dirs = { workspace = true }
anthropic = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
reqwest = { version = "0.11", features = ["json"] }

[dev-dependencies]
mockall = "0.12"
async-trait = "0.1"
proptest = "1.3"
tempfile = "3.8"
predicates = "3.0"
futures = "0.3"